Release v0.3.0 (#29)
* Implement audio messaging

* Update spec

* Improve file messaging

* Implement pic messaging

* Implement polls
